@@ -2,12 +2,12 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
-    //id 'checkstyle'
+    id 'checkstyle'
 }
 
-//checkstyle {
-//    toolVersion = '10.2'
-//}
+checkstyle {
+    toolVersion = '10.2'
+}
 
 repositories {
     mavenCentral()
@@ -20,9 +20,17 @@ dependencies {
     String javaFxVersion = '17.0.7'
 
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'linux'
     implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: javaFxVersion, classifier: 'linux'
     implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: javaFxVersion, classifier: 'linux'
     implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'win'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'mac'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: javaFxVersion, classifier: 'linux'
 }
 
 test {
@@ -45,6 +53,12 @@ application {
 shadowJar {
     archiveBaseName.set("popi")
     archiveClassifier.set("")
+    manifest {
+        attributes(
+                'Main-Class': 'popi.launch.Launcher'
+        )
+    }
+    configurations = [project.configurations.runtimeClasspath]
 }
 
 sourceSets {
@@ -57,13 +71,6 @@ sourceSets {
 
 
 run{
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    }
-
     standardInput = System.in
     enableAssertions = true
 }
